Update About page
Modifications to layout and content.

--- a/about.html
+++ b/about.html
@@ -5,26 +5,18 @@ permalink: /about
 
 <!-- Main Container -->
 
-<div class="row container-kamn">
-  <img src="{{ site.baseurl }}/assets/img/slider/slide1.jpg" class="blog-post" alt="Pierce's Paw Paradise" align="right" width="100%"> 
-</div>
-
 <div id="banners"></div>
 <div class="container">   
   <div class="row">
     <div class="side-left col-sm-4 col-md-4">
-      <h3 class="lead">About Pierce's Paw Paradise:</h3><hr>
-      <p>Welcome to Pierce's Paw Paradise:  Your go-to destination for all things pets (except the pets themselves)! Nestled in the heart of Sanibel Island at Jerry's Plaza, we're a locally owned and operated pet supply store.</p>
-      <a href="#our-story">Our Story</a><br>
-      <a href="#owners">The Owners</a><br>
-      <a href="#visit-us">Visit Us</a><br>
+      <img src="{{ site.baseurl }}/assets/img/family.png" class="blog-post" alt="Pierce's Paw Paradise" align="right" width="100%"> 
     </div>
     <div class="col-sm-8 col-md-8">
       <h3 class="lead" id="our-story">Welcome to Pierce's Paw Paradise</h3><hr>
       <p>Welcome to Pierce's Paw Paradise:  Your go-to destination for all things pets (except the pets themselves)! Nestled in the heart of Sanibel Island at Jerry's Plaza, we're a locally owned and operated pet supply store offering a thoughtfully curated selection of toys, treats, collars, leashes, home goods, gifts, and high-quality dog and cat food.</p>
 
       <h3 class="lead" id="owners">The Owners</h3><hr>
-      <p>Everything you'll find on our shelves has been handpicked by Rachel Pierce, who runs the shop alongside her husband, Matthew. Rachel's eye for quality and passion for pets shine through in every product we carry, from quirky toys and gourmet treats to stylish pet accessories and charming gifts for animal lovers.</p>
+      <p>Everything you'll find on our shelves has been handpicked by Rachel Pierce, who runs the shop alongside her husband, Matthew, and their four children, two dogs, two cats, and a turtle! Rachel's eye for quality and passion for pets shine through in every product we carry, from quirky toys and gourmet treats to stylish pet accessories and charming gifts for animal lovers.</p>
 
       <h3 class="lead" id="visit-us">Visit Us</h3><hr>
       <p>Whether you're a full-time islander or just visiting paradise for a while, we're here to help you spoil your four-legged family members with something special. Stop in and see why Pierce's Paw Paradise is a tail-wagging favorite on Sanibel!</p>
