--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,6 @@ layout: default_style
 permalink: /contact
 published: true
 ---
-<!-- Main Container -->
 
 <div class="container-fluid-kamn">
   <div class="row">
@@ -18,7 +17,7 @@ published: true
         <p class="block-author">{{ site.company_name }}</p>
         <p>{{ site.address_line }}</p>
         <p>Phone: {{ site.telephone_number }}</p>
-        <p>Fax: {{ site.fax_number }}</p>
+        <!-- <p>Fax: {{ site.fax_number }}</p> -->
 
         <em class="block-author">Email: {{ site.company_email }}</em> <br>
         <br>
@@ -65,5 +64,3 @@ published: true
     </div>
   </div>
 </div>    
-    
-<!--End Main Container -->
